--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </div>
 <div style="margin-top: 40px">
     <div class="made-with">
-        <h4 class="color" style="color:black;font-family: cursive;">Made with ❤️ by <a href="https://github.com/AdishiSood" style="color:black;font-family: cursive;">Adishi Sood</a></h4>
+        <h4 class="color" style="color:black;font-family: cursive;">Made with ❤️ by <a href="https://github.com/NomanDev2136" style="color:black;font-family: cursive;">Noman</a></h4>
     </div>
     <div style="color:black;margin-top:15px; font-family: cursive;">Connect with me:</div>
 
