--- a/index.html
+++ b/index.html
@@ -3,64 +3,69 @@
 
 <head>
     <meta charset="utf-8">
-<link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="script.js"></script>
-<title>Pomodoro Timer</title>
+    <script src="script.js"></script>
+    <title>Pomodoro Timer</title>
 </head>
+
 <body>
 
-<header>
-    <h1>Pomodoro Timer</h1>
-    <h4 class="small" >
-        <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" title="Pomodoro Technique" style="color:black;">What's That?</a></h4>
-</header>
+    <header>
+        <h1>Pomodoro Timer</h1>
+        <h4 class="small">
+            <a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" title="Pomodoro Technique">What's That?</a>
+        </h4>
+    </header>
 
-<div class="container">
-    <div class="row flex-container">
-        <div class="session-control flex-item">
-      <span class="session-text flex-container-column">
-      <p class="session">Session</p>
-      <button class="plus btn btn-default btn-sm flex-item-column"><span class="fa fa-plus"></span></button>
-      <p class="time-length flex-item-column">25</p>
-      <button class="minus btn btn-default btn-sm flex-item-column"><span class="fa fa-minus"></span></button>
-      </span>
-        </div>
+    <div class="container">
+        <div class="row flex-container">
+            <div class="session-control flex-item">
+                <span class="session-text flex-container-column">
+                    <p class="session">Session</p>
+                    <button class="plus btn btn-default btn-sm flex-item-column"><span class="fa fa-plus"></span></button>
+                    <p class="time-length flex-item-column">25</p>
+                    <button class="minus btn btn-default btn-sm flex-item-column"><span class="fa fa-minus"></span></button>
+                </span>
+            </div>
 
-        <div class="timer-div flex-item">
-            <p class="timer"></p>
-        </div>
+            <div class="timer-div flex-item">
+                <p class="timer"></p>
+            </div>
 
-
-        <div class="break-control flex-item">
-      <span class="break-text flex-container-column">
-      <p class="break">Break</p>
-      <button class="plus-break btn btn-default btn-sm flex-item-column"><span class="fa fa-plus"></span></button>
-      <p class="break-length flex-item-column">05</p>
-      <button class="minus-break btn btn-default btn-sm flex-item-column"><span class="fa fa-minus"></span></button>
-        </span>
+            <div class="break-control flex-item">
+                <span class="break-text flex-container-column">
+                    <p class="break">Break</p>
+                    <button class="plus-break btn btn-default btn-sm flex-item-column"><span class="fa fa-plus"></span></button>
+                    <p class="break-length flex-item-column">05</p>
+                    <button class="minus-break btn btn-default btn-sm flex-item-column"><span class="fa fa-minus"></span></button>
+                </span>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="buttons">
-    <button class="start"><i class="fa fa-lg fa-2x fa-play"></i></button>
-    <button class="stop"><i class="fa fa-lg fa-2x fa-pause"></i></button>
-    <button class="reset"><i class="fa fa-lg fa-2x fa-spinner"></i></button>
-</div>
-<div style="margin-top: 40px">
-    <div class="made-with">
-        <h4 class="color" style="color:black;font-family: cursive;">Made with ❤️ by <a href="https://github.com/NomanDev2136" style="color:black;font-family: cursive;">Noman</a></h4>
+    <div class="buttons">
+        <button class="start"><i class="fa fa-lg fa-2x fa-play"></i></button>
+        <button class="stop"><i class="fa fa-lg fa-2x fa-pause"></i></button>
+        <button class="reset"><i class="fa fa-lg fa-2x fa-spinner"></i></button>
     </div>
-    <div style="color:black;margin-top:15px; font-family: cursive;">Connect with me:</div>
 
-    <div class="social-icons">
-        <a href="https://github.com/NomanDev2136" target="_blank">
-            <i class="fa fa-github" style="font-size:30px; color:white" ></i>
-        </a>
+    <div class="footer">
+        <div class="made-with">
+            <h4 class="color">Made with ❤️ by <a href="https://github.com/NomanDev2136">Noman</a></h4>
+        </div>
+        <div class="connect">Connect with me:</div>
+        <div class="social-icons">
+            <a href="https://github.com/NomanDev2136" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+        </div>
     </div>
-</div>
+
+</body>
+
+</html>
